Add POST with JSON String in argument

--- a/example/web/baasboxweb.html
+++ b/example/web/baasboxweb.html
@@ -41,5 +41,14 @@
      <div id="currentuser">
       <p id="sample_text_id">Current User!</p>
     </div>
+
+    <div id="createdocument">
+        <p id="sample_text_id">Create Document!</p>
+    </div>
+
+    <div id="loaddocument">
+        <p id="sample_text_id">Load Document!</p>
+    </div>
+
   </body>
 </html>
